--- a/app.json
+++ b/app.json
@@ -25,6 +25,9 @@
     "ios": {
       "supportsTablet": true
     },
-    "description": ""
+    "description": "",
+    "androidStatusBar":{
+      "backgroundColor":"#000000"
+    }
   }
 }
