--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@expo/vector-icons": "^9.0.0",
     "@shoutem/ui": "^0.23.9",
+    "event-emitter": "^0.3.5",
     "expo": "^32.0.0",
     "native-base": "^2.11.0",
     "react": "16.5.0",
